commit task2 complete

--- a/task2.html
+++ b/task2.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>task1</title>
+    <title>task2</title>
 </head>
 <body>
-    <script src="./js/arrays.js"></script>
+    <script src="./js/arraysTask2.js"></script>
     <script>
-        task1();
+        task2();
     </script>
-    <!-- (p>a)*2 -->
-    <p><a href=""></a></p>
-    <p><a href=""></a></p>
 </body>
 </html>
