--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=!, initial-scale=1.0">
-    <title>Document</title>
+    <title>Задания</title>
 </head>
 <body>
-    <h1>Arrays</h1>
-    <p><a href=""></a></p>
+    <h1>Ссылки на задания </h1>
+    <br>
+    <p><a href="./task1.html">Задание #1</a></p>
+    <p><a href="./task2.html">Задание #2</a></p>
+    <p><a href="">Задание #3</a></p>
+    <p><a href="">Задание #4</a></p>
+    <p><a href="">Задание #5</a></p>
+    <p><a href="">Задание #6</a></p>
+    <p><a href="">Задание #7</a></p>
+    <p><a href="">Задание #8</a></p>
+    <p><a href="">Задание #9</a></p>
+    <p><a href="">Задание #10</a></p>
 </body>
 </html>
