--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <br>
     <p><a href="./task1.html">Задание #1</a></p>
     <p><a href="./task2.html">Задание #2</a></p>
-    <p><a href="">Задание #3</a></p>
-    <p><a href="">Задание #4</a></p>
-    <p><a href="">Задание #5</a></p>
+    <p><a href="./task3.html">Задание #3</a></p>
+    <p><a href="./task4.html">Задание #4</a></p>
+    <p><a href="./task5.html">Задание #5</a></p>
     <p><a href="">Задание #6</a></p>
     <p><a href="">Задание #7</a></p>
     <p><a href="">Задание #8</a></p>
