--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p><a href="./task3.html">Задание #3</a></p>
     <p><a href="./task4.html">Задание #4</a></p>
     <p><a href="./task5.html">Задание #5</a></p>
-    <p><a href="">Задание #6</a></p>
+    <p><a href="./task6.html">Задание #6</a></p>
     <p><a href="">Задание #7</a></p>
     <p><a href="">Задание #8</a></p>
     <p><a href="">Задание #9</a></p>
