coommit all 10 tasks done

--- a/task10.html
+++ b/task10.html
@@ -6,7 +6,7 @@
     <title>task5</title>
 </head>
 <body>
-    <script src="./js/arrayTask9.js"></script>
+    <script src="./js/arraysTask10.js"></script>
     <script>
        let data = [
         {
@@ -26,7 +26,7 @@
         },
     ];
 
-        let result = task9(mas);
+        let result = task10(data);
         alert(`Массив: ${result}`);
         
         
