--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <p><a href="./task4.html">Задание #4</a></p>
     <p><a href="./task5.html">Задание #5</a></p>
     <p><a href="./task6.html">Задание #6</a></p>
-    <p><a href="">Задание #7</a></p>
-    <p><a href="">Задание #8</a></p>
-    <p><a href="">Задание #9</a></p>
-    <p><a href="">Задание #10</a></p>
+    <p><a href="./task7.html">Задание #7</a></p>
+    <p><a href="./task8.html">Задание #8</a></p>
+    <p><a href="./task9.html">Задание #9</a></p>
+    <p><a href="./task10.html">Задание #10</a></p>
 </body>
 </html>
