--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 <body>
     <h1>Ссылки на задания </h1>
     <br>
-    <p><a href="./task1.html">Задание #1</a></p>
-    <p><a href="./task2.html">Задание #2</a></p>
-    <p><a href="./task3.html">Задание #3</a></p>
-    <p><a href="./task4.html">Задание #4</a></p>
-    <p><a href="./task5.html">Задание #5</a></p>
-    <p><a href="./task6.html">Задание #6</a></p>
-    <p><a href="./task7.html">Задание #7</a></p>
-    <p><a href="./task8.html">Задание #8</a></p>
-    <p><a href="./task9.html">Задание #9</a></p>
-    <p><a href="./task10.html">Задание #10</a></p>
+    <p><a href="./task1.html">Задание #6.1</a></p>
+    <p><a href="./task2.html">Задание #6.2</a></p>
+    <p><a href="./task3.html">Задание #6.3</a></p>
+    <p><a href="./task4.html">Задание #6.4</a></p>
+    <p><a href="./task5.html">Задание #6.5</a></p>
+    <p><a href="./task6.html">Задание #6.6</a></p>
+    <p><a href="./task7.html">Задание #6.7</a></p>
+    <p><a href="./task8.html">Задание #6.8</a></p>
+    <p><a href="./task9.html">Задание #6.9</a></p>
+    <p><a href="./task10.html">Задание #6.10</a></p>
+
+    <p><a href=""></a>Задание #9.1</p>
 </body>
 </html>
