forget update index - now done

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p><a href="./task9.html">Задание #6.9</a></p>
     <p><a href="./task10.html">Задание #6.10</a></p>
 
-    <p><a href=""></a>Задание #9.1</p>
+    <p><a href="./task9.1.html"></a>Задание #9.1</p>
+    <p><a href="./task9.2.html"></a>Задание #9.2-3</p>
 </body>
 </html>
