done only 2 tasks from Dom exercise

--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
 
     <p><a href="./task9.1.html">Задание #9.1</a></p>
     <p><a href="./task9.2.html">Задание #9.2-3</a></p>
+
+    <p><a href="./task10_Dom.html">Задание 10 Document object model</a></p>
 </body>
 </html>
