Commit with WATHCS

--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
     <p><a href="./task9.2.html">Задание #9.2-3</a></p>
 
     <p><a href="./task10_Dom.html">Задание 10 Document object model</a></p>
+
+    <p><a href="./indexWATCH.html">Задание 11 Форма и скрипт часов</a></p>
 </body>
 </html>
