--- a/task10_Dom.html
+++ b/task10_Dom.html
@@ -18,12 +18,22 @@
         <br><br>
 
         <a href="./task10_Dom2.html">Next page</a>
+
+        <br><br>
+
+        <h1>title</h1>
+
+        <br><br>
+
+        <input type="text">
     </form>
 
     <script>
         
         button_info.onclick = function() {
             document.getElementById("area").value = navigator.userAgent.toLowerCase();
+
+            document.querySelector("h1").innerHTML = document.getElementById("area").value;
         }
     </script>
     
